"Created Recyclerview for view user"

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,5 +22,6 @@
         </activity>
         <activity android:name=".activities.Activity.AdminDashboardActivity" />
         <activity android:name=".activities.Activity.CreateUserActivity" />
+        <activity android:name=".activities.Activity.ViewUserActivity" />
     </application>
 </manifest>
